--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
     <div id="main">
@@ -66,15 +66,15 @@
                 <div class="row member-list">
                     <div class="col col-3 s-col-full mt-32 font-15">
                         <p class="member-name">Name</p>
-                        <img src="/assets/img/band/bandmember.jpg" alt="" class="member-img">
+                        <img src="assets/img/band/bandmember.jpg" alt="" class="member-img">
                     </div>
                     <div class="col col-3 s-col-full mt-32 font-15">
                         <p class="member-name">Name</p>
-                        <img src="/assets/img/band/bandmember.jpg" alt="" class="member-img">
+                        <img src="assets/img/band/bandmember.jpg" alt="" class="member-img">
                     </div>
                     <div class="col col-3 s-col-full mt-32 font-15">
                         <p class="member-name">Name</p>
-                        <img src="/assets/img/band/bandmember.jpg" alt="" class="member-img">
+                        <img src="assets/img/band/bandmember.jpg" alt="" class="member-img">
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <!-- *Place -->
                     <div class="row places-list">
                         <div class="col col-3 s-col-full mt-16 ">
-                            <img src="/assets/img/tour/newyork.jpg" alt="" class="place-img">
+                            <img src="assets/img/tour/newyork.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="col col-3 s-col-full mt-16 ">
-                            <img src="/assets/img/tour/newyork.jpg" alt="" class="place-img">
+                            <img src="assets/img/tour/newyork.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="col col-3 s-col-full mt-16 ">
-                            <img src="/assets/img/tour/newyork.jpg" alt="" class="place-img">
+                            <img src="assets/img/tour/newyork.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
